Update footer copyright text formatting

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 </section>
   </body>
 <footer>
-  <p>© 2025 <strong>Love Cure Nation</strong> – Tous droits réservés</p>
+  <p><small></small>© 2025 <strong>Love Cure Nation</strong> – Tous droits réservés</small></p>
 </footer>
 </html>
