Update links in index.html to use .html extensions

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <hr class="separator-activities-2">
   <div class="cards">
     
-    <a href="chorale" class="card">
+    <a href="chorale.html" class="card">
       <h3>🎶 Chorale bilingue</h3>
       <p>Un répertoire varié, français et anglais, ouvert à tous les niveaux.<br><br> Tout les samedis au centre commercial Courbaril, Le robert. </p>
     </a>
 
-    <a href="cours particulier" class="card">
+    <a href="cours-particulier.html" class="card">
       <h3>🎤 Cours de chant particulier</h3>
       <p>Un accompagnement personnalisé pour développer ta voix et ta créativité.<br><br> Sur rendez-vous.</p>
     </a>
