--- a/index.html
+++ b/index.html
@@ -8,18 +8,31 @@
 </head>
 <body>
 
-<div class="hero">
+<header class="hero">
   <h1> Love Cure Nation </h1>
-  <p class="subtitle">Apprendre L'anglais par le chant.</p>
-</div>
+   <p class="subtitle">Apprendre L'anglais par le chant.</p>
+   <nav class="nav">
+    <a href="index.html" class="logo">Love Cure Nation</a>
+
+     <ul class="nav-links">
+       <li><a href="cours-particulier.html"a> cours particuliers</li>
+       <li><a href="chorale.html"> Chorale bilingue</a></li>
+       <li><a> href="contact.html"> Contact</a></li>
+     </ul>
+   </nav>
+</header>
+  
 <hr class="separator-hero">
+  
 <section class="about">
   <h2>Qui somme-nous?</h2>
   <p> Love Cure nation a pour vocation l'apperentissage de la langue anglaise par le Biais Du chant.<br><br> L’Association réunit des passionnés et des professionnels de musique et de chant, dans un cadre
     chaleureux, inclusif et bilingue.<br><br> Notre mission : partager la joie du chant,
     développer la voix de chacun et créer des moments musicaux uniques. </p>
 </section>
+  
 <hr class="separator-activities">
+  
 <section class="activities">
   <h2>  Nos activités</h2>
   <hr class="separator-activities-2">
