Fix anchor tag syntax for Contact link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <ul class="nav-links">
        <li><a href="cours-particulier.html"a> cours particuliers</li>
        <li><a href="chorale.html"> Chorale bilingue</a></li>
-       <li><a> href="contact.html"> Contact</a></li>
+       <li><a href="contact.html"> Contact</a></li>
      </ul>
    </nav>
 </header>
