Refactor header and navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Love cure nation</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<header class="hero">
-  <h1> Love Cure Nation </h1>
-   <p class="subtitle">Apprendre L'anglais par le chant.</p>
-   <nav class="nav">
+  
+<header class="header">
+  <nav class="nav">
     <a href="index.html" class="logo">Love Cure Nation</a>
 
-     <ul class="nav-links">
-       <li><a href="cours-particulier.html"a> cours particuliers</li>
-       <li><a href="chorale.html"> Chorale bilingue</a></li>
-       <li><a href="contact.html"> Contact</a></li>
-     </ul>
-   </nav>
+    <ul class="nav-links">
+      <li><a href="cours-particulier.html">Cours particuliers</a></li>
+      <li><a href="chorale.html">Chorale bilingue</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
+
+<section class="hero">
+  <h1>Love Cure Nation</h1>
+  <p class="subtitle">Apprendre l'anglais par le chant.</p>
+</section>
+
   
 <hr class="separator-hero">
   
