Add head section with meta tags and title

--- a/chorale.html
+++ b/chorale.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-  
+ <head>
+  <meta charset="UTF-8"> <!-- ← très important pour les accents -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive -->
+  <title>Love Cure Nation- Chorale bilingue</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+ 
 <section class="hero">
   <h1><a href="index.html">Love Cure Nation</a></h1>
   <p class="subtitle"><a href="index.html">Apprendre l'anglais par le chant.</a></p>
@@ -19,7 +25,8 @@
     </ul>
   </nav>
 </header>
-  
+
+
 
 
   
