--- a/chorale.html
+++ b/chorale.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
  <head>
-  <meta charset="UTF-8"> <!-- ← très important pour les accents -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love Cure Nation- Chorale bilingue</title>
   <link rel="stylesheet" href="style.css">
 </head>
