Fix HTML formatting in chorale.html

--- a/chorale.html
+++ b/chorale.html
@@ -6,7 +6,7 @@
   <title>Love Cure Nation- Chorale bilingue</title>
   <link rel="stylesheet" href="style.css">
 </head>
- 
+<body>
 <section class="hero">
   <h1><a href="index.html">Love Cure Nation</a></h1>
   <p class="subtitle"><a href="index.html">Apprendre l'anglais par le chant.</a></p>
