--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
   <nav class="nav">
     
       <ul class="nav-links">
+      <li><a href="index.html">Acceuil</a></li>
       <li><a href="cours-particulier.html">Cours particuliers</a></li>
       <li><a href="chorale.html">Chorale bilingue</a></li>
       <li><a href="contact.html">Contact</a></li>
