--- a/cours-particulier.html
+++ b/cours-particulier.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <li><a href="index.html">Acceuil</a></li><!DOCTYPE html>
 <html lang="fr">
  <head>
   <meta charset="UTF-8"> 
@@ -21,6 +21,7 @@
   <nav class="nav">
     
       <ul class="nav-links">
+      <li><a href="index.html">Acceuil</a></li>
       <li><a href="cours-particulier.html">Cours particuliers</a></li>
       <li><a href="chorale.html">Chorale bilingue</a></li>
       <li><a href="contact.html">Contact</a></li>
