--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,40 @@
   </header>
 
 
+ <main>
+<section class="contact">
+  <h1>📩 Contactez-nous</h1>
+  <p class="subtitle">Posez vos questions ou prenez rendez-vous facilement.</p>
+</section>
 
+ 
+
+  <section class="about">
+    <h2>Formulaire de contact</h2>
+    <p>Vous pouvez nous envoyer un message via le formulaire ci-dessous :</p>
+    <form action="#" method="post">
+      <label for="name">Nom :</label><br>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <label for="email">Email :</label><br>
+      <input type="email" id="email" name="email" required><br><br>
+
+      <label for="message">Message :</label><br>
+      <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+      <button type="submit">Envoyer</button>
+    </form>
+  </section>
+
+ <section class="activities">
+    <h2>Nos coordonnées</h2>
+    <p>
+      📍 Adresse : 123 Rue de la Musique, Le Robert, Martinique<br>
+      📞 Téléphone : +596 123 456<br>
+      ✉ Email : contact@lovecurenation.com
+    </p>
+  </section>
+</main>
 
 
 
