--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <label for="message">Message :</label><br>
       <textarea id="message" name="message" rows="5" required></textarea><br><br>
 
-      <button type="submit">Envoyer</button>
+      <button type="submit" class="btn">Envoyer</button>
     </form>
   </section>
 
