--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,13 @@
     <h2>Formulaire de contact</h2>
     <p>Vous pouvez nous envoyer un message via le formulaire ci-dessous :</p>
     <form action="#" method="post">
-      <label for="name">Nom :</label><br>
+      <label for="name">Nom :</label><br><br>
       <input type="text" id="name" name="name" required><br><br>
 
-      <label for="email">Email :</label><br>
+      <label for="email">Email :</label><br><br>
       <input type="email" id="email" name="email" required><br><br>
 
-      <label for="message">Message :</label><br>
+      <label for="message">Message :</label><br><br>
       <textarea id="message" name="message" rows="5" required></textarea><br><br>
 
       <button type="submit" class="btn">Envoyer</button>
