--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
   <section class="about">
     <h2>Formulaire de contact</h2>
-    <p>Vous pouvez nous envoyer un message via le formulaire ci-dessous :</p>
+    <p>Vous pouvez nous envoyer un message via le formulaire ci-dessous :</p><br><br>
     <form action="#" method="post">
       <label for="name">Nom :</label><br><br>
       <input type="text" id="name" name="name" required><br><br>
