--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </form>
   </section>
 
- <section class="activities">
+ <section class="coordonnee">
     <h2>Nos coordonnées</h2>
     <p>
       
