--- a/chorale.html
+++ b/chorale.html
@@ -27,7 +27,28 @@
   </nav>
 </header>
 
+<main>
+  <section class="about">
+   <h1>🎶 Chorale Bilingue</h1>
+   <p class="subtitle">Participez à nos sessions de chant en français et anglais.</p><br>
+   
+   <h2>Présentation</h2>
+    <p>
+      Notre chorale bilingue est ouverte à tous, débutants comme confirmés.<br><br>
+      Nous explorons un répertoire varié en français et en anglais, 
+      et nous nous retrouvons chaque semaine pour chanter ensemble dans la joie et la bonne humeur.
+    </p>
+  </section>
 
+  <section class="activities">
+    <h2>Informations pratiques</h2>
+    <p>
+      📍 Lieu : Centre commercial Courbaril, Le Robert<br>
+      🕒 Horaires : Tous les samedis, 10h – 12h<br>
+      🎵 Encadrement par des professionnels de la musique et du chant
+    </p>
+  </section>
+</main>
 
 
   
