--- a/cours-particulier.html
+++ b/cours-particulier.html
@@ -29,6 +29,32 @@
   </nav>
 </header>
 
+ <main>
+  <section class="about">
+    <h2>Présentation des cours</h2>
+    <p>
+      Nos cours particuliers sont adaptés à chaque élève, débutant ou avancé.<br><br>
+      Nous travaillons la technique vocale, la respiration, le rythme et l’interprétation musicale.  
+      L’objectif : te faire progresser rapidement et prendre confiance en ta voix.
+    </p>
+  </section>
+
+  <section class="activities">
+    <h2>Infos pratiques</h2>
+    <p>
+      📍 Lieu : Centre de musique Love Cure Nation, Le Robert<br>
+      🕒 Sur rendez-vous, horaires flexibles selon vos disponibilités<br>
+      🎵 Encadrement par des professionnels expérimentés
+    </p>
+</section>
+
+  <section class="cta">
+    <h2>Prêt à commencer ?</h2>
+    <p>Réserve ton premier cours particulier dès maintenant !</p>
+    <a href="contact.html" class="btn">Nous contacter</a>
+  </section>
+
+</main>
 
 
 <footer>
