--- a/cours-particulier.html
+++ b/cours-particulier.html
@@ -48,7 +48,7 @@
     </p>
 </section>
 
-  <section class="cta">
+  <section class="cta2">
     <h2>Prêt à commencer ?</h2>
     <p>Réserve ton premier cours particulier dès maintenant !</p>
     <a href="contact.html" class="btn">Nous contacter</a>
