--- a/cours-particulier.html
+++ b/cours-particulier.html
@@ -31,7 +31,7 @@
 
  <main>
   <section class="about">
-    <h2>Présentation des cours</h2>
+    <h2>Présentation des <strong>cours particulier</strong></h2>
     <p>
       Nos cours particuliers sont adaptés à chaque élève, débutant ou avancé.<br><br>
       Nous travaillons la technique vocale, la respiration, le rythme et l’interprétation musicale.  
