--- a/chorale.html
+++ b/chorale.html
@@ -48,9 +48,15 @@
       🎵 Encadrement par des professionnels de la musique et du chant
     </p>
   </section>
+
+  <section class="cta2">
+    <h2>Prêt à commencer ?</h2>
+    <p>Réserve ton premier cours particulier dès maintenant !</p>
+    <a href="contact.html" class="btn">Nous contacter</a>
+  </section>
+
+
 </main>
-
-
   
 <footer>
   <p><small>© 2025 <strong>Love Cure Nation</strong> – Tous droits réservés</small></p>
