--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
       <h3>🎤 Cours de chant particulier</h3>
       <p>Un accompagnement personnalisé pour développer ta voix et ta créativité.<br><br> Sur rendez-vous.</p>
     </a>
-    
+
+ <section class="activities">
+    <h2>Informations pratiques</h2>
+    <p>
+      📍 Lieu : Centre commercial Courbaril, Le Robert<br>
+      🕒 Horaires : Tous les samedis, 10h – 12h<br>
+      🎵 Encadrement par des professionnels de la musique et du chant
+    </p>
+
+   
   </div>
 </section>
 
