--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
+<main>
 
+ 
 <section class="hero">
   <h1><a href="index.html">Love Cure Nation</a></h1>
   <p class="subtitle"><a href="index.html">Apprendre l'anglais par le chant.</a></p>
@@ -55,7 +57,9 @@
       <h3>🎤 Cours de chant particulier</h3>
       <p>Un accompagnement personnalisé pour développer ta voix et ta créativité.<br><br> Sur rendez-vous.</p>
     </a>
+</section>
 
+ 
  <section class="activities">
     <h2>Informations pratiques</h2>
     <p>
@@ -64,9 +68,12 @@
       🎵 Encadrement par des professionnels de la musique et du chant
     </p>
 
-   
-  </div>
-</section>
+
+</section> 
+
+
+</main>
+
 
 <footer>
   <p><small>© 2025 <strong>Love Cure Nation</strong> – Tous droits réservés</small></p>
