--- a/chorale.html
+++ b/chorale.html
@@ -46,7 +46,7 @@
     <a href="contact.html" class="btn">Nous contacter</a>
   </section>
 
-  <section class="activities">
+  <section class="cta">
     <h2>Informations pratiques</h2>
     <p>
       📍 Lieu : Centre commercial Courbaril, Le Robert<br>
