--- a/cours-particulier.html
+++ b/cours-particulier.html
@@ -39,13 +39,13 @@
     </p>
   </section>
 
-<section class="cta2">
+<section class="contact-link">
     <h2>Prêt à commencer ?</h2>
     <p>Réserve ton premier cours particulier dès maintenant !</p>
     <a href="contact.html" class="btn">Nous contacter</a>
 </section>
   
-  <section class="activities">
+  <section class="cta">
     <h2>Infos pratiques</h2>
     <p>
       📍 Lieu : Centre de musique Love Cure Nation, Le Robert<br>
