--- a/chorale.html
+++ b/chorale.html
@@ -40,7 +40,7 @@
     </p>
   </section>
 
-  <section class="cta2">
+  <section class="contact-link">
     <h2>Prêt à commencer ?</h2>
     <p>Réserve ton premier cours particulier dès maintenant !</p>
     <a href="contact.html" class="btn">Nous contacter</a>
