--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
  
   <header class="header">
   <nav class="nav">
-    
+
+   <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+   
       <ul class="nav-links">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="cours-particulier.html">Cours particuliers</a></li>
