--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
  
   <header class="header">
 
-   <nav class="nav">
+    <nav class="navbar">
+    <div class="logo"><img src=LogoLoveCureNation-2.png</div>
 
-   <div class="hamburger" onclick="toggleMenu()">
+    <button class="menu-toggle" id="menuToggle">
       <div></div>
       <div></div>
       <div></div>
-    </div>
+    </button>
    
-     <ul class="nav-links">
+     <ul class="nav-links" id="navLinks>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="cours-particulier.html">Cours particuliers</a></li>
       <li><a href="chorale.html">Chorale bilingue</a></li>
