--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="header">
 
     <nav class="navbar">
-    <div class="logo"><img src=LogoLoveCureNation-2.png</div>
+    <div class="logo"><a href="index.html><img src="LogoLoveCureNation-2.png"</a></div>
 
     <button class="menu-toggle" id="menuToggle">
       <div></div>
